Update Вопрос 1-677. Cобеседование по Java. Разбор вопросов и ответов.md
53

--- a/Вопрос 1-677. Cобеседование по Java. Разбор вопросов и ответов.md
+++ b/Вопрос 1-677. Cобеседование по Java. Разбор вопросов и ответов.md
@@ -1331,7 +1331,7 @@ public class MyClass {
 
 Поэтому, если вы определяете статический метод в абстрактном классе, то этот метод будет доступен для всех подклассов, а также может быть использован без создания экземпляра любого объекта этого класса. Если этот метод объявлен абстрактным, то каждый подкласс должен реализовать его самостоятельно, независимо от того, является ли указанный метод статическим или нет.
 
-Таким образом, метод может быть как статическим, так и абстрактным одновременно в контексте абстрактного класса.
+НЕ МОЖЕТ! Или абстрактный - следовательно без тела. Либо статический но тогда у него должно быть тело.
 
 <DIV ALIGN="RIGHT">
     <B><A HREF="#">↥ ВЕРНУТЬСЯ К НАЧАЛУ</A></B> <BR>
